# Inkwell

./: .dockerignore  .gitignore  Cargo.toml  LICENSE  README.md
.woodpecker/: package_ci.yml  package_tag.yml  pull_request.yml
deploy/: .env  Dockerfile  docker-compose.yml
inkwell-client/: Cargo.toml  index.html
inkwell-client/src/: main.rs
inkwell-core/: Cargo.toml
inkwell-core/src/: lib.rs
inkwell-server/: Cargo.toml
inkwell-server/src/: ingest.rs  main.rs
migrations/: 20240101000000_initial_schema.sql  20260212000000_add_akaze.sql  20260224000000_add_card_details.sql  20260224000001_add_stats.sql  20260226023251_add_promo_grouping.sql
